--- a/main.css
+++ b/main.css
@@ -429,16 +429,16 @@ Secondary Section
         flex-direction: row;
     }
     .wrap{
-        background-color: rgb(175, 31, 31);
+        background-color: #fff;
         width: 100%;
         padding: 40px 0;
         height: auto;
-        margin-left: 50px;
+        margin: 0px 35px;
         box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
         padding-bottom: 40px;
     }
     .note{
-        width: 330px;
+        width: 350px;
         height: auto;
         padding: 0 30px;
         padding-bottom: 20px;
