--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     padding: 0;
+   
     list-style-type: none;
     text-decoration: none;
 }
@@ -211,6 +212,7 @@ Tertiary
     align-items: center;
     /* text-align: center; */
     margin: 0 50px;
+    overflow-x: hidden;
     /* padding: 30px 60px; */
     justify-content: center;
 }
@@ -220,19 +222,19 @@ Tertiary
     margin: 20px 0;
     padding: 40px 20px;
     height: auto;
+    
     box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
     padding-bottom: 40px;
 }
-.note,.note1,.note2{
+/* .note,.note1,.note2{
     width: 320px;
-}
+} */
 .note h1::before{
     content: "\f0e7";
     font-size: 30px;
     font-family: "FontAwesome";
     color: #52b765;
-    margin-top: 20px;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 .note1 h1::before{
     content: "\f1f1";
@@ -241,8 +243,8 @@ Tertiary
     color: #52b765;
     margin-top: 20px;
     font-weight: 500;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 .note2 h1::before{
     content: "\f299";
@@ -300,10 +302,9 @@ Tertiary
 /* ================
 MEDIA QUARY FOR 540
 ====================*/
-@media(max-width:540px){
+@media(max-width:414px){
     nav{
         padding: 0 27px;
-        /* background: url(/images/thomas-dumortier-Rdh4UcM6Y7E-unsplash.jpg); */
     }
     .logo h1{
         color: #52b765;
@@ -322,7 +323,7 @@ MEDIA QUARY FOR 540
     .form li a{
         color: #fff;
     }
-
+    
 
 
 }
@@ -334,6 +335,7 @@ MEDIA QUARY FOR 540
 MEDIA QUARY FOR 800
 ====================*/
 @media(max-width:800px){
+  
     .burger{
         display: block;
         cursor: pointer;
@@ -375,7 +377,7 @@ MEDIA QUARY FOR 800
         display: block;
     }
     .primary_banner{
-        background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0,0,0,0.4)), url(images/img\ 1.jpg)no-repeat;
+        background: blur(3px), url(images/img\ 1.jpg)no-repeat;
         height: 70vh;
         width: 100%;
         background-position: center;
@@ -399,8 +401,8 @@ Secondary Section
 ==========<*/
   .secondary{
     display: block;
-    flex-direction: column;
-    /* justify-content: space-between; */
+    flex-direction: row;
+    justify-content: space-between;
     padding: 50px 15px;
     }
     .experience_mobile{
@@ -468,21 +470,27 @@ Secondary Section
 
     .tertiary{
         display: flex; 
+        width: 400px;
+        overflow-x: hidden;
         flex-direction: row;
-        margin: 0 auto;
-        /* justify-content: center; */
+        margin: 20px auto;
+        justify-content: space-between;
     }
     .wrap{
         background-color: #fff;
-        width: 100%;
+        width: 90%;
         padding: 40px 15px;
         height: auto;
-        margin-left: 35px;
+        
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-right: 40px;
+        margin-left: 20px;
         box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
         padding-bottom: 40px;
     }
     .note{
-        width: 280px;
+        width: 330px;
         height: auto;
         padding: 0 30px;
         padding-bottom: 20px;
