--- a/main.css
+++ b/main.css
@@ -132,7 +132,12 @@ nav{
 .experience_desktop{
     width: 42%;
 }
-
+.material-icons-outlined{
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 30px;
+    color: rgb(7, 7, 7);
+}
 .experience_desktop p,.experience_mobile p{
     color: #52b765;
     font-weight: 600;
@@ -154,7 +159,9 @@ nav{
     padding-top: 10px;
 }
 
-
+.yellow{
+    color: red;
+}
 .customers_list{
     display: flex;
     margin-top: 50px;
