--- a/assets/css/googleicon.css
+++ b/assets/css/googleicon.css
@@ -1,8 +1,7 @@
 .material-icons-outlined {
     font-family: 'Material Icons';
     font-weight: normal;
-    font-style: normal;
-    font-size: 24px;  /* Preferred icon size */
+    font-style: normal; /* Preferred icon size */
     display: inline-block;
     line-height: 1;
     text-transform: none;
