--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -2,5 +2,6 @@ Primary-color{
     primary--color: #52b765;
     brown-color: #7b7b7b;
     box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
+    box-shadow: 0 15px 20px rgb(0 0 0 / 5%);
 
 }
