--- a/main.css
+++ b/main.css
@@ -427,11 +427,12 @@ CONTAINER
     align-items: flex-start;
     position: relative;
     background-color: #fff;
-    width: 435px;
-    height: 435px;
+    width: 430px;
+    height: 430px;
     border: 13px solid #f1f4f1;
     border-radius: 50%;
     margin-top: 50px;
+    margin-bottom: 50px;
     -webkit-box-shadow: 0 10px 18px rgb(241 241 241 / 75%);
     box-shadow: 0 10px 18px rgb(241 241 241 / 75%);
     padding: 46px 0 0 0;
@@ -442,21 +443,36 @@ CONTAINER
     justify-content: space-between;
 }
 .circle-img img{
-    width: 50%;
-    top: -20px;
+    width: 55%;
+    top: -25px;
     object-fit: cover;
     position: absolute;
-    margin-left: -30px;
+    margin-left: -40px;
 }
 
 .big-number-circle strong{
     font-size: 120px;
-    top: 10px;
+    top: 4px;
     position: absolute;
     left: 35%;
     color: #f1f4f1; 
 }
+.Pck {
+    margin-right: -40px;
+    margin-left: 200px;
+}
+.Pck h3{
+    font-size: 20px;
 
+}
+.Pck h3 span{
+    color: #52b765;
+}
+.Pck p{
+    color: #7b7b7b;
+    font-weight: 500;
+    line-height: 1.5em;
+}
 
 
 
@@ -517,11 +533,14 @@ MEDIA QUARY FOR 540
     }
     .big-number-circle{
         margin-top: 50px;
-        width: 300px;
-        height: 300px;
-        margin-left: 30px;
+        width: 280px;
+        height: 280px;
+        margin-left: 20px;
     }
-
+    .Pck {
+        margin-right: -12px;
+        margin-left: 130px;
+    }
 
 }
 
@@ -776,11 +795,11 @@ Secondary Section
     .note-on-Delivery{
         width: 100%;
     }
-    /* .big-number-circle{
+    .big-number-circle{
         margin-top: 50px;
-        width: 400px;
-        height: 400px;
-    } */
+        width: 320px;
+        height: 320px;
+    }
 }
 
 
@@ -823,6 +842,16 @@ MEDIA QUARY FOR 992px
         font-size: 17px;
         line-height: 10px;
         font-weight: 600;
+    }
+    .big-number-circle{
+        margin-left: 70px;
+    }
+    .circle-img img{
+        width: 60%;
+        top: -120px;
+        object-fit: cover;
+        position: absolute;
+        margin-left: -50px;
     }
 }
 
