--- a/main.css
+++ b/main.css
@@ -460,7 +460,7 @@ CONTAINER
     color: #f1f4f1; 
 }
 .Pck {
-    margin-right: -40px;
+    margin-right: -30px;
     margin-left: 200px;
 }
 .Pck h3{
@@ -476,6 +476,7 @@ CONTAINER
     line-height: 1.5em;
 }
 .switch{
+    margin: 0 30px;
     text-align: center;
 }
 .progress-container{
@@ -553,8 +554,14 @@ CONTAINER
     background-color: #52b765;
 }
 
-
-
+.machine img{
+    width: 50%;
+    height: 80vh;
+    object-fit: cover;
+}
+.washing-machine{
+    margin: 80px 0;
+}
 
 
 
@@ -633,11 +640,12 @@ MEDIA QUARY FOR 540
 
 
 
-/* ================
-MEDIA QUARY FOR 800
-====================*/
+/* =======================
+MEDIA QUARY FOR MAX-WIDTH 800
+==========================*/
+
+
 @media(max-width:768px){
-  
     .burger{
         display: block;
         cursor: pointer;
@@ -883,6 +891,7 @@ Secondary Section
     }
     .big-number-circle{
         margin-top: 50px;
+        margin-left: 30px;
         width: 320px;
         height: 320px;
     }
@@ -890,20 +899,33 @@ Secondary Section
         height: 15px;
         width: 15px;
     }
+    .machine img{
+        width: 100%;
+    }
 }
 
 
 
-/* ================
-MEDIA QUARY FOR 992px
-====================*/
+/* ===========================
+MEDIA QUARY FOR MIN-WIDTH 768px
+==============================*/
 
 @media(min-width: 768px){
     .box{
         display: flex;
     }
     .exp img{
-        width: 30%;
+        width: 60%;
+    }
+    .primary_banner,.primary_banner1{
+        height: 50vh;
+    }
+    .Pck {
+        margin-right: -30px;
+        margin-left: 100px;
+    }
+    .big-number-circle {
+        margin-top: 150px;
     }
 }
 
@@ -912,9 +934,10 @@ MEDIA QUARY FOR 992px
 
 
 
-/* ================
-MEDIA QUARY FOR 992px
-====================*/
+/* =======================
+MEDIA QUARY FOR MIN-WIDTH 1024px 
+==========================*/
+
 
 @media(min-width: 1024px){
     .num_circle{
@@ -931,7 +954,9 @@ MEDIA QUARY FOR 992px
         margin-top: 25%;
         z-index: 2;
     }
-    
+    .exp{
+        width: 50%;
+    }
     .num_circle p{
         font-size: 45px;
         margin-top: 32px;
@@ -944,7 +969,7 @@ MEDIA QUARY FOR 992px
         font-weight: 600;
     }
     .big-number-circle{
-        margin-left: 70px;
+        margin: 70px 40px;
     }
     .circle-img img{
         width: 60%;
@@ -958,6 +983,34 @@ MEDIA QUARY FOR 992px
     }
     .note-on-Delivery button {
         margin-top: 75px;
+    }
+    .primary_banner,.primary_banner1{
+        height: 50vh;
+    }
+    .exp img{
+        object-fit: cover;
+        width: 100%;
+    }
+    .Pck {
+        margin-right: -30px;
+        margin-left: 130px;
+    }
+    
+}
+
+@media(min-width: 1330px){
+    .primary_banner,.primary_banner1{
+        height: 90vh;
+    }
+    .exp img{
+        width: 100%;
+    }
+    .exp{
+        width: 50%;
+    }
+    .Pck {
+        margin-right: -30px;
+        margin-left: 200px;
     }
 }
 
